# DOEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  ignored_main.cpp  premake5.lua  runformarter.sh  workstate.txt
assets/maps/: battlecity.xml  battlecitymap.map
cmake-module/: fetchGLMProjectFromSource.cmake  fetchSDLProjectFromSource.cmake
includes/: Animation.h  Application.h  BackgroundObject.h  Camera.h  Canvas.h  Color.h  Constant.h  DOEngine.h  DOEngine_SDL_includes.h  Delay.h  EntityComponentSystem.h  Event.h  EventHandler.h  FPSManager.h  Font.h  GameObject.h  GameObjectPool.h  GameState.h  GameStateManager.h  Geometric.h  Grids.h  Gui.h  Joypad.h  Keyboard.h  LinkList.h  Logger.h  Mouse.h  MusicHandler.h  NativeStructs.h  NativeWrapper.h  Particle.h  PlatformState.h  PrimitivesGraphics.h  Renderer.h  ResourceManager.h  SDLJoypad.h  SDLKeyboard.h  SDLMouse.h  ScrollableList.h  SelectionRect.h  (+16 more)
includes/abstract/: Camera.h
sample/: CMakeLists.txt  PongState.cpp  ignored_main.cpp  main.cpp
sample/BattleCityRecreation/: BattleCityRecreation.cpp
sample/BattleSpawn/: BattleSpawn.cpp  BattleSpawn_ok.cpp
sample/MusicPlayer/: MusicPlayer.cpp
sample/Pacman/: Pacman.cpp
sample/SDL2O/: SDL2O.cpp
sample/SideScroller/: SideScroller.cpp
sample/SpaceInvader/: SpaceInvader.cpp
sample/assets/maps/: simple-map1.map
sample/battlecity/: CMakeLists.txt  PlayStateMachine.cpp  PlayStateMachine.h  main.cpp
sample/tetris/: Tetris.cpp
src/: DevState.cpp  DevState.h  Event.h  GeometricRender.cpp  Map.h  Object.h  StateMachine.h  Texture.h  UDP.h  Window.h
src/Application/: Application.cpp  Geometric.cpp  Logger.cpp  OpenglLoader.cpp  SDLOpenglRenderer.cpp  SDLOpenglRenderer.h  SDLOpenglWindow.cpp  SDLOpenglWindowManager.h  SDLRenderer.cpp  SDLRenderer.h  SDLTTFText.cpp  SDLTTFText.h  SDLTexture.cpp  SDLTexture.h  SDLWindowManager.cpp  SDLWindowManager.h  StringUtils.cpp  Timer.cpp  WindowManager.cpp  opengl_decls.cpp  opengl_decls.h
src/Drawable/: Canvas.cpp  GameObject.cpp  Gui.cpp  SelectionRect.cpp
src/Event/: Event.cpp  SDLJoypad.cpp  SDLKeyboard.cpp  SDLMouse.cpp
src/Font/: SDLTTFText.cpp  SDLTTFText.h  TTFText.cpp
src/GameObject/: GameObject.cpp
src/GameState/: GameStateManager.cpp
src/Network/: UDPPacket.cpp
src/Texture/: Texture.cpp
src/Tilemap/: Tilemap.cpp
src/Timer/: FPSManager.cpp
src/test/: CMakeLists.txt  testmain.cpp
src/test/fixtures/: DoEngineFixture.h
src/test/mocks/: AbstractWindowMock.h  CameraMock.h  EventHandlerMock.h  FPSManagerMock.h  FontMock.h  GameObjectMock.h  GameStateManagerMock.h  GameStateMock.h  JoypadMock.h  MouseMock.h  MusicHandlerMock.h  ParticleMock.h  RendererMock.h  SDLMock.cpp  SDLMock.h  UDPPacketMock.h
src/test/units/: utEventHandler.cpp  utFPSManager.cpp  utGameStateManager.cpp  utLinkList.cpp  utSDLJoypad.cpp  utSDLKeyboard.cpp  utSDLMouse.cpp  utTileMap.cpp  utUtils.cpp
